# crtmpserver

./: README  cleanup.sh
appscaffold/: README  initapp
appscaffold/templates/: crtmpserver.lua
appscaffold/templates/builders/cmake/: CMakeLists.txt
appscaffold/templates/sources/: #APPNAME_LC#.cpp  #APPNAME_LC#.h  #APPNAME_LC#application.cpp  #APPNAME_LC#application.h  rtmpappprotocolhandler.cpp  rtmpappprotocolhandler.h
builders/VS2008/: VS2008.sln
builders/VS2008/admin/: admin.vcproj
builders/VS2008/applestreamingclient/: applestreamingclient.vcproj
builders/VS2008/appselector/: appselector.vcproj
builders/VS2008/common/: common.vcproj
builders/VS2008/flvplayback/: flvplayback.vcproj
builders/VS2008/proxypublish/: proxypublish.vcproj
builders/VS2008/rtmpserver/: rtmpserver.vcproj
builders/VS2008/samplefactory/: samplefactory.vcproj
builders/VS2008/stresstest/: stresstest.vcproj
builders/VS2008/thelib/: thelib.vcproj
builders/VS2008/vptests/: vptests.vcproj
builders/VS2010/: VS2008.sln  VS2010.sln  cleanup.bat  dummy.cpp  release.bat
builders/VS2010/SvcConfig/: SvcConfig.vcxproj  SvcConfig.vcxproj.filters
builders/VS2010/SvcControl/: SvcControl.vcxproj  SvcControl.vcxproj.filters
builders/VS2010/admin/: admin.vcxproj  admin.vcxproj.filters
builders/VS2010/applestreamingclient/: applestreamingclient.vcxproj  applestreamingclient.vcxproj.filters
builders/VS2010/appselector/: appselector.vcxproj  appselector.vcxproj.filters
builders/VS2010/common/: common.vcxproj  common.vcxproj.filters
builders/VS2010/crtmpserver/: crtmpserver.vcxproj  crtmpserver.vcxproj.filters  trafficdissector.vcxproj  trafficdissector.vcxproj.filters
builders/VS2010/flvplayback/: flvplayback.vcxproj  flvplayback.vcxproj.filters
builders/VS2010/lua/: lua.vcxproj  lua.vcxproj.filters
builders/VS2010/luavmapp/: luavmapp.vcproj
builders/VS2010/proxypublish/: proxypublish.vcxproj  proxypublish.vcxproj.filters
builders/VS2010/rtmpserver/: rtmpserver.vcxproj  rtmpserver.vcxproj.filters
builders/VS2010/samplefactory/: samplefactory.vcxproj  samplefactory.vcxproj.filters
builders/VS2010/stresstest/: stresstest.vcxproj  stresstest.vcxproj.filters
builders/VS2010/tests/: tests.vcxproj  tests.vcxproj.filters
builders/VS2010/thelib/: thelib.vcxproj  thelib.vcxproj.filters
builders/VS2010/vm/: vm.vcxproj  vm.vcxproj.filters
builders/VS2010/vmapp/: vmapp.vcxproj  vmapp.vcxproj.filters
builders/VS2010/vptests/: vptests.vcxproj  vptests.vcxproj.filters
builders/VS2010/win32service/: win32service.vcxproj  win32service.vcxproj.filters
builders/android/: Makefile  pack.sh  rtmpserver.lua  start.sh  upload.sh
builders/android-ndk/: Application.mk
builders/androidapplestreaming/: AndroidManifest.xml  Makefile  build.xml  default.properties  local.properties
builders/androidapplestreaming/jni/: Android.mk
builders/cmake/: CMakeLists.txt  cmake_bundle.patch  debianpackage.patch  package.sh  run  toolchain-sourcery_g++_lite.cmake  vg.sh
builders/cmake/androidapplestreaming/: CMakeLists.txt
builders/cmake/applications/: CMakeLists.txt
builders/cmake/applications/admin/: CMakeLists.txt
builders/cmake/applications/applestreamingclient/: CMakeLists.txt
builders/cmake/applications/appselector/: CMakeLists.txt  server.crt  server.key
builders/cmake/applications/flvplayback/: CMakeLists.txt  mediaFolder  users.lua
builders/cmake/applications/proxypublish/: CMakeLists.txt
builders/cmake/applications/samplefactory/: CMakeLists.txt
builders/cmake/applications/stresstest/: CMakeLists.txt
builders/cmake/applications/vmapp/: CMakeLists.txt  crtmpserverdefaults.lua  flvplayback.lua  testapp.lua
builders/cmake/applications/vptests/: CMakeLists.txt
builders/cmake/cmake_find_modules/: Find_dl.cmake  Find_execinfo.cmake  Find_fcgi.cmake  Find_fetch.cmake  Find_lua.cmake  Find_mhash.cmake  Find_openssl.cmake  Find_pcap.cmake  Find_scons.cmake  Find_tinyxml.cmake  Find_v8.cmake  findergenerator.sh  pch_support.cmake  xcode_has_include_pch.sh
builders/cmake/common/: CMakeLists.txt
builders/cmake/crtmpserver/: CMakeLists.txt  crtmpserver.lua
builders/cmake/ltib/: LTIB_README  crtmpserver.spec  lua.spec  toolchain-arm-linux.cmake
builders/cmake/lua/: CMakeLists.txt
builders/cmake/packing/: create_debian_package.sh  freebsd.sh  linux.sh  macosx.sh
builders/cmake/packing/debian/: create_debian_package.sh  crtmpserver  prerm
builders/cmake/rtmpserver/: CMakeLists.txt  rtmpserver.lua
builders/cmake/tests/: CMakeLists.txt
builders/cmake/thelib/: CMakeLists.txt
builders/cmake/tinyxml/: CMakeLists.txt
builders/cmake/trafficdissector/: CMakeLists.txt  trafficdissector.lua
builders/cmake/vm/: CMakeLists.txt
builders/cmake/vmtests/: CMakeLists.txt  utils.lua  vmtests.js  vmtests.lua
builders/make/: Makefile  README.openssl  apps  apps.mk  arm-linux-davinci.mk  cleanupobjs.sh  compile.mk  freebsd.mk  genappmk.sh  linux-brickcom-uclinux.mk  linux-hisi-uclinux.mk  linux.mk  osx.mk  template
builders/netbeans/: cleanup.sh
builders/netbeans/osx/: fixnbproj.sh
builders/packing/centos/: crtmpserver.init
builders/packing/debian/: README.txt  build_package.sh  cleanup.sh  fix_paths.sed
builders/packing/freebsd/: create_package.sh  distinfo
builders/packing/vanilla/: freebsd.sh  linux.sh  macosx.sh
builders/uclinux-make/: Makefile  rtmpserver.lua
configs/: all.debug.lua  flvplayback.lua  run.bat  run.sh  run_all.sh  run_all_daemon.sh  run_flvplayback.sh  run_flvplayback_daemon.sh  users.lua
constants/: branding.lua  constants.lua
docs/: ApplicationProtocols.doc  architecture.txt  config.doxy  diagrams.cdd  keepalive.txt  server.xlsx  startup_script_rtmpd  stream_from_vlc.txt  toolchains.txt
docs/simpleLive/: simpleLive.html  simpleLive.swf
man/: crtmpserver.1
media/: README.txt
sources/androidapplestreaming/include/: api.h  jniwrapper.h  variantconnection.h
sources/androidapplestreaming/src/: api.cpp  jniwrapper.cpp  main.cpp  variantconnection.cpp
sources/common/: memorypool.patch  variant.patch
(+1231 files in other folders)
